css/index.css
#content {
    --scroll: 0;

    --plotted-scroll: calc(pow(calc(var(--scroll) / 25), .5) * 25);

    position: absolute;

    width: calc(100% - max(50px - (var(--plotted-scroll) * 1px), 0px));
    height: fit-content;
    min-height: 1500px;
    bottom: 100px;
    left: 50%;

    /*padding-inline: calc(min(var(--plotted-scroll) * 1px, 50px) / 2 + 20px);*/
    padding-inline: 20px;
    padding-top: 20px;

    transform: translate(-50%, 100%);

    background-color: var(--bg-secondary);
    border: 1px solid var(--border);
    border-radius:  var(--radius) var(--radius) 0 0;

    /*--local-radius: calc(var(--radius) - min(var(--plotted-scroll) / 2 * 1px, var(--radius)));
    border-radius: var(--local-radius);*/
}

#bg {
    --content-scroll: 0;
    --plotted-scroll: calc(pow(calc(var(--content-scroll) / 1.2), .5) * 5);

    position: fixed;
    width: 100%;
    height: 100%;
    bottom: calc(var(--plotted-scroll) * 1px);
    left: 0;
}

@keyframes hoverEffect {
  0%   {transform: translate(-50%,calc(-50% + 5px));}
  50%  {transform: translate(-50%,calc(-50% - 5px));}
  100% {transform: translate(-50%,calc(-50% + 5px));}
}

@keyframes PulsatingGlow {
  0%   {transform: translate(-50%, -50%) scale(1);}
  25%  {transform: translate(-50%, -50%) scale(1.1);}
  50%  {transform: translate(-50%, -50%) scale(1);}
  75%  {transform: translate(-50%, -50%) scale(1.2);}
  100% {transform: translate(-50%, -50%) scale(1);}
}


#animal {
    position: absolute;
    font-size: 100px;
    top: 35%;
    left: 50%;
    transform: translate(-50%, -50%);
    animation-name: hoverEffect;
    animation-duration: 6s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

#glow {
    position: absolute;
    width: 100px;
    height: 100px;
    top: 35%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(0, 255, 5, 0.5);
    border-radius: 50%;
    filter: blur(50px);
    animation-name: PulsatingGlow;
    animation-duration: 10s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

#circle {
    position: absolute;
    width: 500px;
    height: 500px;
    top: 35%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(0, 255, 5, 0.05);
    border-radius: 50%;
    filter: blur(50px);
    animation-name: PulsatingGlow;
    animation-duration: 20s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

#animal-title {
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translateX(-50%);
    font-size: 32px;
}

.progress-container {
    position: absolute;
    top: 55%;
    left: 50%;
    transform: translateX(-50%);
    background-color: rgba(255, 255, 255, 0.1);
    width: 50%;
    height: 5px;
    border-radius: 5px;
}

.progress-bar {
    width: 20%;
    height: 100%;
    background-color: rgba(0, 255, 5, 255);
    box-shadow: 0 0 10px rgba(0, 255, 5, 0.6);
    border-radius: 5px;
    transition: width 0.3s ease;
}

